# pattenmatching_sharedmemory

./: .gitignore  CMakeConfig.cmake  CMakeLists.txt  README.md  makefile  patternmatching_data.py  run_patternmatching.py  show_patternmatching_results.py
src/: CMakeLists.txt  make.defs  make.rules  (+1 more)
src/patternmatching/: CMakeLists.txt  makefile  multiple_label_cpu.cc  multiple_label_cpu.cu  multiple_label_cpu.cuh  multiple_label_cpu.h  multiple_label_step.cc  multiple_label_step.h  patternmatching_binary.cc  patternmatching_binary.cu  patternmatching_cmd_line_option.cc  patternmatching_logger.cc  patternmatching_logger.h  test_bitmap_dynamic.cc  totem_bfs_hybrid_copy.cu  totem_bfs_hybrid_copy.cuh  totem_frontier_copy.cu  totem_multiple_label_cpu.cu  totem_multiple_label_cpu.cuh  totem_multiple_label_step.cc  totem_multiple_label_step.h  totem_paternmatching_print.cu  totem_patternmatching.h  totem_patternmatching_binary.cu  totem_patternmatching_cmd_line_option.cc  totem_patternmatching_cmd_line_option.h  totem_patternmatching_cmdline.cu  totem_patternmatching_logger.cc  totem_patternmatching_logger.h  totem_unique_label_cpu.cu  totem_unique_label_cpu.cuh  totem_unique_label_step.cc  unique_label_cpu.cc  unique_label_cpu.cu  unique_label_cpu.cuh  unique_label_cpu.h  unique_label_step.cc  unique_label_step.h
src/patternmatching/algorithms/: CMakeLists.txt  algo_results.cc  algo_results.h  backward_compatibility.h  bitmap.h  bitmap.tpp  bitmap_dynamic.h  bitmap_dynamic.tpp  bitmap_fixed.h  bitmap_fixed.tpp  graph_stat.cc  graph_stat.h  graph_stat_cpu.h  graph_stat_cpu.tpp  make_undirected_cpu.cc  make_undirected_cpu.h  multiple_label_cc_backtrack_cpu.h  multiple_label_cc_backtrack_cpu.tpp  multiple_label_cc_cpu.cuh  multiple_label_cc_cpu.h  multiple_label_cc_cpu.tpp  multiple_label_cc_strict_cpu.h  multiple_label_cc_strict_cpu.tpp  multiple_label_circular_constraint.cc  multiple_label_circular_constraint.h  multiple_label_common.h  multiple_label_common_cpu.cuh  multiple_label_common_cpu.h  multiple_label_common_cpu.tpp  multiple_label_lcc0_cpu.h  multiple_label_lcc0_cpu.tpp  multiple_label_lcc_cpu.cuh  multiple_label_lcc_cpu.h  multiple_label_lcc_cpu.tpp  multiple_label_local_constraint.cc  multiple_label_local_constraint.h  multiple_label_path_constraint.cc  multiple_label_path_constraint.h  multiple_label_pc_backtrack_cpu.h  multiple_label_pc_backtrack_cpu.tpp  (+45 more)
src/patternmatching/multiple_label/: CMakeLists.txt  multiple_label_cc_backtrack_cpu.h  multiple_label_cc_backtrack_cpu.tpp  multiple_label_cc_cpu.h  multiple_label_cc_cpu.tpp  multiple_label_cc_strict_cpu.h  multiple_label_cc_strict_cpu.tpp  multiple_label_common.h  multiple_label_common_cpu.h  multiple_label_common_cpu.tpp  multiple_label_constraint_circular.cc  multiple_label_constraint_circular.h  multiple_label_constraint_effectiveness.cc  multiple_label_constraint_effectiveness.h  multiple_label_constraint_local.h  multiple_label_constraint_path.cc  multiple_label_constraint_path.h  multiple_label_constraint_template.cc  multiple_label_constraint_template.h  multiple_label_enumeration_cpu.h  multiple_label_enumeration_cpu.tpp  multiple_label_generate_constraint_circular.cc  multiple_label_generate_constraint_circular.h  multiple_label_generate_constraint_enumeration.cc  multiple_label_generate_constraint_enumeration.h  multiple_label_generate_constraint_local.cc  multiple_label_generate_constraint_path.cc  multiple_label_generate_constraint_path.h  multiple_label_generate_constraint_template.cc  multiple_label_generate_constraint_template.h  multiple_label_lcc0_cpu.h  multiple_label_lcc0_cpu.tpp  multiple_label_lcc_cpu.h  multiple_label_lcc_cpu.tpp  multiple_label_pc_backtrack_cpu.h  multiple_label_pc_backtrack_cpu.tpp  multiple_label_pc_cpu.h  multiple_label_pc_cpu.tpp  multiple_label_pc_strict_cpu.h  multiple_label_pc_strict_cpu.tpp  (+6 more)
src/patternmatching/multiple_label_test/: CMakeLists.txt  multiple_label_cc_backtrack_cpu.h  multiple_label_cc_backtrack_cpu.tpp  multiple_label_cc_strict_cpu.h  multiple_label_cc_strict_cpu.tpp  multiple_label_constraint_effectiveness.cc  multiple_label_constraint_effectiveness.h  multiple_label_constraint_effectiveness.tpp  multiple_label_constraint_local.cc  multiple_label_constraint_template.h  multiple_label_generate_constraint_circular.cc  multiple_label_generate_constraint_circular.h  multiple_label_generate_constraint_local.h  multiple_label_lcc0_cpu.h  multiple_label_lcc_cpu.tpp  multiple_label_pc_backtrack_cpu.h  multiple_label_pc_backtrack_cpu.tpp  multiple_label_pc_strict_cpu.h  multiple_label_pc_strict_cpu.tpp  multiple_label_tds_backtrack_cpu.h  multiple_label_tds_backtrack_cpu.tpp  multiple_label_tds_strict_cpu.h  multiple_label_tds_strict_cpu.tpp
src/patternmatching/test/: CMakeLists.txt  bitmap.cc  bitmap_dynamic.cc  bitmap_fixed.cc  graph_make_undirected.cc  graph_make_undirected_cpu.cc  graph_make_undirected_cpu.h  graph_stat_effectiveness.cc  graph_stat_effectiveness_cpu.cc  graph_stat_effectiveness_cpu.h
src/patternmatching/test_article/: CMakeLists.txt  test_optimization_multiple_label.cc  test_optimization_multiple_label_cpu.cc  test_optimization_multiple_label_cpu.h  test_optimization_multiple_label_step.cc  test_order_multiple_label.cc  test_order_multiple_label_cpu.cc  test_order_multiple_label_cpu.h  test_order_multiple_label_step.cc  test_order_multiple_label_step.h
src/patternmatching/unique_label/: CMakeLists.txt  unique_label_cc_cpu.tpp  unique_label_circular_constraint.h  unique_label_common_cpu.h  unique_label_common_cpu.tpp
src/patternmatching/utils/: CMakeLists.txt  bitmap_dynamic.cc  bitmap_dynamic.h  cmd_line_option.cc  cmd_line_option.h  common_utils.cc  common_utils.h  edge.cc  edge.h  logger.cc  logger.h  utils.h  walk.cc  walk.h
src/totem/: CMakeLists.txt  totem_bitmap.cu  totem_comdef.h  totem_comkernel.cuh  totem_components.cu  totem_engine.cu  totem_engine_internal.cuh  totem_graph.cu  totem_graph.h  totem_grooves.cu  totem_grooves_internal.cc  totem_mem.cu  totem_mem.h  totem_partition.cu  totem_radix_sort.cu  totem_util.h
(+55 files in other folders)
